--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,9 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+    dataBinding {
+        enabled = true
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -27,10 +30,13 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:design:26.1.0'
-    compile "android.arch.lifecycle:extensions:$rootProject.archLifecycleVersion"
-    compile "android.arch.persistence.room:runtime:$rootProject.archRoomVersion"
+    implementation "android.arch.lifecycle:extensions:$rootProject.archLifecycleVersion"
+    implementation "android.arch.persistence.room:runtime:$rootProject.archRoomVersion"
+    implementation "android.arch.persistence.room:rxjava2:1.0.0"
     annotationProcessor "android.arch.lifecycle:compiler:$rootProject.archLifecycleVersion"
     annotationProcessor "android.arch.persistence.room:compiler:$rootProject.archRoomVersion"
+    implementation "io.reactivex.rxjava2:rxjava:2.1.7"
+    implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
