--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,16 @@
 
 buildscript {
     ext{
-        archLifecycleVersion = "1.0.0-rc1"
-        archRoomVersion  = "1.0.0-rc1"
+        archLifecycleVersion = "1.0.0"
+        archRoomVersion  = "1.0.0"
+        rxjavaVersion = "2.1.7"
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath 'com.android.tools.build:gradle:3.0.1'
         
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -20,8 +21,10 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
         jcenter()
+        maven { url 'https://maven.google.com' }
+        mavenCentral()
+        google()
     }
 }
 
